fix: body overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@
 
 body {
     width: 100%;
+    overflow-x: hidden;
     min-height: 100vh;
     background-color: #f4efe6;
     color: #2f2a24;
